--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,13 @@
 .container {
   width: 1200px;
   box-sizing: border-box;
+  margin: 0 auto;
 }
-.head {
+.navbar {
   background-color: #adb5bd;
   height: 30px;
   width: 100%;
+  margin: -10px 0 0 -10px;
 }
 .title {
   background-color: #adb5bd;
@@ -17,8 +19,7 @@
   background-color: #adb5bd;
   height: 400px;
   width: 595px;
-  margin-right: 10px;
-
+  margin: 0 10px 0 -10px;
   float: left;
 }
 .image1_2 {
@@ -26,7 +27,7 @@
   height: 400px;
   width: 595px;
   float: right;
-  margin-bottom: 20px;
+  margin: 0 10px 20px -10px;
 }
 
 .title2 {
@@ -46,7 +47,7 @@
   float: left;
   margin-right: 10px;
 }
-.images2 {
+.gallery1 {
   margin-left: 190px;
   margin-bottom: 20px;
   clear: both;
@@ -62,7 +63,7 @@
   margin-right: 10px;
   margin-bottom: 20px;
 }
-.images3 {
+.gallery2 {
   margin-left: 190px;
   margin-top: 230px;
   clear: both;
@@ -76,35 +77,38 @@
 }
 .box {
   width: 100%;
-  height: 580px;
+  height: 620px;
+  margin: 0 20px 40px -10px;
   background-color: #adb5bd;
 }
 .column {
+  width: 300px;
+  margin: 70px 20px 0 10px;
   float: left;
-  width: 320px;
-  margin-top: 50px;
-  margin-right: 20px;
-  margin-left: 50px;
-  background-color: white;
+
+  background-color: #fefeff;
 }
-.main1 {
+.column:first-child {
+  margin-left: 120px;
+
+  background-color: #fefeff;
+}
+.top {
   background-color: #adb5bd;
   height: 50px;
   margin: 30px 20px;
 }
-.main2 {
+.middle {
   background-color: #adb5bd;
   height: 150px;
-  margin-bottom: 40px;
-  margin-left: 20px;
-  margin-right: 20px;
+
+  margin: 0 20px 40px 20px;
 }
-.main3 {
+.bottom {
   background-color: #adb5bd;
   height: 150px;
-  margin-bottom: 30px;
-  margin-left: 20px;
-  margin-right: 20px;
+
+  margin: 0 20px 30px 20px;
 }
 .title4 {
   clear: both;
@@ -141,42 +145,34 @@
   width: 530px;
   margin: 20px auto;
 }
-.img1 {
+.button1 {
   height: 40px;
   width: 255px;
   float: left;
-  margin-right: 20px;
-  margin-left: 335px;
-  margin-bottom: 20px;
+
+  margin: 0 20px 20px 335px;
   background-color: #adb5bd;
 }
-.img2 {
+.button2 {
   background-color: #adb5bd;
   height: 40px;
   width: 255px;
   float: left;
-  margin-right: 20px;
-  margin-bottom: 100px;
+
+  margin: 0 20px 80px 0;
 }
-.last {
+.footer {
   clear: both;
-  margin-top: 70px;
+  margin: 50px 0 0 -10px;
   background-color: #adb5bd;
-  height: 240px;
+  height: 220px;
   width: auto;
 }
-.lastimg1 {
+.footerimg1,
+.footerimg2 {
   background-color: #ffffff;
   height: 200px;
   width: 580px;
   float: left;
-  margin: 10px;
-}
-
-.lastimg2 {
-  background-color: #fefeff;
-  height: 200px;
-  width: 580px;
-  float: left;
-  margin: 10px;
+  margin: 10px 10px 0 10px;
 }
